--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ dev = ["pre-commit"]
 
 [tool.black]
 line-length = 120
-target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
+target-version = ['py38', 'py39', 'py310', 'py311']
 include = '\.pyi?$'
 exclude = '''
 /(
